# domino

./: Game.hs  GameState.hs  Main.hs  README  Read.hs  Setup.hs  domino.cabal
Strategy/: Simple.hs
src/: Main.hs
src/Domino/: Game.hs  GameState.hs  Main.hs  Read.hs  Strategy.hs
src/Domino/Strategy/: Counting.hs  Simple.hs
